--- a/app/assets/styles/core/_variables.scss
+++ b/app/assets/styles/core/_variables.scss
@@ -1,4 +1,8 @@
-$text-color: #D6DBDF;
-$color-1: #FF6600;
-$color-2: #34495E;
+$background: #22252A;
+
+$text-color: #B9BABD;
+$highlight-color: #1ED760;
+$primary-color:  #2D3035;
+
+$border-radius: 4px;
 $color-3: #FB6B4C;
