ajustes de layout

--- a/app/assets/styles/patterns/_patterns.scss
+++ b/app/assets/styles/patterns/_patterns.scss
@@ -1,8 +1,9 @@
 @import
- 'header'
-,'icons'
-,'card-profile'
-,'infos'
+ 'icons'
+,'profile'
 ,'orgs'
+,'repo'
+,'search'
 ,'no-user'
+,'footer'
 ;
