--- a/app/assets/styles/core/_normalize.scss
+++ b/app/assets/styles/core/_normalize.scss
@@ -15,6 +15,8 @@ html {
 
 body {
   height: 100%;
+  background: $background;
+  font-family: $font;
 }
 
 .wrapper {
@@ -22,6 +24,10 @@ body {
   margin: 0 auto;
   height: 100%;
   position: relative;
+}
+
+.ps-container>.ps-scrollbar-y-rail>.ps-scrollbar-y {
+  background-color: $highlight-color;
 }
 
 /**
@@ -103,6 +109,7 @@ template {
 a {
   background: transparent;
   text-decoration: none;
+  color: currentColor;
 }
 
 /**
