--- a/app/assets/styles/patterns/_profile.scss
+++ b/app/assets/styles/patterns/_profile.scss
@@ -6,6 +6,16 @@
   text-align: center;
 }
 
+.profile {
+  width: 50%;
+  margin-top: 5%;
+  float: left;
+  background: $primary-color;
+  color: $text-color;
+  height: 80%;
+  border-right: 1px solid lighten($primary-color, 5%);
+}
+
 .info  {
   margin: 30px auto;
   text-align: center;
@@ -45,24 +55,6 @@
   font-size: 16px;
 }
 
-.repositorios {
-  width: 50%;
-  margin-top: 5%;
-  float: left;
-  background: $primary-color;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  height: 80%;
-}
-.repo-list {
-  padding: 20px;
-
-  li a {
-    color: $text-color;
-    padding: 5px 0;
-  }
-}
-
 .numbers {
   @extend .clearfix;
   color: $highlight-color;
@@ -85,5 +77,19 @@
   p {
     margin-top: 3px;
     color: $text-color;
+  }
+}
+
+.seguidores, .seguindo, .favoritos {
+  float: left;
+  width: 33.3333%;
+  padding: 20px 0;
+
+  .octicon {
+    margin-bottom: 10px;
+  }
+
+  span {
+    display: block;
   }
 }
