--- a/app/assets/styles/patterns/_orgs.scss
+++ b/app/assets/styles/patterns/_orgs.scss
@@ -1,6 +1,6 @@
 .orgs {
-  width: 80%;
-  margin: 0 auto;
+  width: 90%;
+  margin: 20px auto 0;
 }
 
   .orgs__wrapper {
@@ -10,8 +10,10 @@
   }
 
   .orgs__img {
-    width: 42px;
-    height: 42px;
+    width: 25px;
+    height: 25px;
+    border-bottom: 2px solid $highlight-color;
+    padding-bottom: 2px;
 
     img {
       width: inherit;
