--- a/app/assets/styles/patterns/_profile.scss
+++ b/app/assets/styles/patterns/_profile.scss
@@ -12,7 +12,7 @@
   float: left;
   background: $primary-color;
   color: $text-color;
-  height: 80%;
+  height: 100%;
   border-right: 1px solid lighten($primary-color, 5%);
 }
 
@@ -20,12 +20,12 @@
   margin: 30px auto;
   text-align: center;
 
-  li {
-    margin-bottom: 7px;
-  }
-
   .octicon {
     margin-right: 10px;
+  }
+
+  &__item {
+    margin-bottom: 7px;
   }
 }
 
@@ -37,22 +37,16 @@
   border: 3px solid $highlight-color;
 }
 
-.about {
-  margin-top: 90px;
-}
-
-.name, .username {
-  text-align: center;
-}
-
 .name {
   font-size: 24px;
   color: $highlight-color;
-  margin-bottom: 5px;
+  margin: 50px 0 5px 0;
+  text-align: center;
 }
 
 .username {
   font-size: 16px;
+  text-align: center;
 }
 
 .numbers {
@@ -61,18 +55,7 @@
   text-align: center;
   margin-top: 20px;
   border-top: 1px solid lighten($primary-color, 5%);
-
-  &:first-child {
-    border-bottom: none;
-  }
-
-  li {
-    border-left: 1px solid lighten($primary-color, 5%);
-
-    &:first-child {
-      border: none;
-    }
-  }
+  border-bottom: 1px solid lighten($primary-color, 5%);
 
   p {
     margin-top: 3px;
@@ -84,12 +67,23 @@
   float: left;
   width: 33.3333%;
   padding: 20px 0;
+  border-left: 1px solid lighten($primary-color, 5%);
 
   .octicon {
     margin-bottom: 10px;
-  }
-
-  span {
     display: block;
+    font-size: 24px;
+  }
+}
+
+.seguidores {
+  border-left: none;
+}
+
+@media screen and ( max-width: 900px ) {
+  .profile {
+    width: 100%;
+    height: auto;
+    border-right: none;
   }
 }
