--- a/app/assets/styles/patterns/_repo.scss
+++ b/app/assets/styles/patterns/_repo.scss
@@ -4,7 +4,7 @@
   float: left;
   background: $primary-color;
   position: relative;
-  height: 80%;
+  height: 100%;
 }
 .repo-list {
   padding: 20px;
@@ -23,6 +23,7 @@
   border-top: 1px solid lighten($primary-color, 5%);
   border-bottom: 1px solid darken($primary-color, 5%);
   padding: 10px 0;
+  color: $text-color;
 
   &:first-child {
     border-top: none;
@@ -38,15 +39,22 @@
 }
 
 [data-repo="true"] {
-  i {
+  .octicon {
     @extend .octicon-repo-forked;
-    color: $text-color;
+    
   }
 }
 
 [data-repo="false"] {
-  i {
+  .octicon {
     @extend .octicon-repo;
-    color: $text-color;
+  }
+}
+
+
+@media screen and ( max-width: 900px ) {
+  .repositorios {
+    width: 100%;
+    height: 500px;
   }
 }
