--- a/app/assets/styles/patterns/_profile.scss
+++ b/app/assets/styles/patterns/_profile.scss
@@ -63,9 +63,9 @@
   }
 }
 
-.seguidores, .seguindo, .favoritos {
+.followers, .following {
   float: left;
-  width: 33.3333%;
+  width: 50%;
   padding: 20px 0;
   border-left: 1px solid lighten($primary-color, 5%);
 
@@ -76,7 +76,7 @@
   }
 }
 
-.seguidores {
+.followers {
   border-left: none;
 }
 
